@@ -1,6 +1,7 @@
 AM_CCFLAGS = -Wall -fvisibility=hidden
 
 AM_CPPFLAGS =	-I$(top_srcdir) \
+			$(X11_CFLAGS) \
 			$(GTK_CFLAGS) \
 			-DGTK_DISABLE_SINGLE_INCLUDES \
 			-DGDK_DISABLE_DEPRECATED \
@@ -11,5 +12,6 @@ AM_CPPFLAGS =	-I$(top_srcdir) \
 			-DLIBDIR=\""${libdir}/${PACKAGE}"\"
 
 LIBS =	-lmagic \
+		$(X11_LIBS) \
 		$(GTK_LIBS)
 
