@@ -18,6 +18,11 @@ AM_PROG_CC_C_O
 CXXFLAGS=-Wall
 AC_SUBST(CXXFLAGS)
 
+X11_MODULES="x11 >= 1.0.0"
+PKG_CHECK_MODULES(X11, $X11_MODULES)
+AC_SUBST(X11_LIBS)
+AC_SUBST(X11_CFLAGS)
+
 AC_MSG_CHECKING(whether to use gtk3)
 AC_ARG_ENABLE(gtk3,
     [  --enable-gtk3           Use GTK3.],
