@@ -1,4 +1,5 @@
 0.0.3
+Made single instance app.
 Added 'Extract' to context menu.
 Added duplicate menu item to pop up.
 Disks inserted/removed  now auto detected.
